_docs/kustomize/akash-services/network-policies.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: akash-services-default-deny-ingress
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: akash-services-allow-akash-services
spec:
  podSelector:
    matchLabels: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              akash.network/name: akash-services
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: akash-services-allow-ingress-nginx
spec:
  podSelector:
    matchLabels: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
